scratch/oxcaml_research/recovery/r2_env_error/results/compile.out
== env_a_closed_records_positive (pass) ==
env=A closed_records portable=true result_sum=35
PASS expected-pass env_a_closed_records_positive
== env_b_phantom_tuple_positive (pass) ==
env=B phantom_tuple portable=true values=22,23
PASS expected-pass env_b_phantom_tuple_positive
== env_c_closed_object_negative (fail) ==
File "scratch/oxcaml_research/recovery/r2_env_error/env_c_closed_object_negative.ml", line 27, characters 15-18:
27 | let program : (env, error, int) Effect.t =
                    ^^^
Error: This type "env" should be an instance of type
         "('a : value mod portable contended)"
       The kind of env is value mod global many non_float
         because it's the type of an object.
       But the kind of env must be a subkind of value mod portable contended
         because of the definition of t at file "scratch/oxcaml_research/recovery/r2_env_error/env_c_closed_object_negative.ml", lines 11-12, characters 2-69.
PASS expected-fail env_c_closed_object_negative
== error_a_closed_polyvariant_positive (pass) ==
error=A closed_polyvariant portable=true typed=true
PASS expected-pass error_a_closed_polyvariant_positive
== error_b_closed_record_positive (pass) ==
error=B closed_record_sum portable=true typed=true
PASS expected-pass error_b_closed_record_positive
== error_c_cause_portable_positive (pass) ==
error=C cause_portable portable=true typed_channel=false
PASS expected-pass error_c_cause_portable_positive
== negative_open_polyvariant_error (fail) ==
File "scratch/oxcaml_research/recovery/r2_env_error/negative_open_polyvariant_error.ml", line 3, characters 38-62:
3 | let cause = Effet.Cause.Portable.Fail (`Worker_failed "typed")
                                          ^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type "[> `Worker_failed of string ]"
       but an expression was expected of type "('a : value mod portable)"
       The kind of [> `Worker_failed of string ] is value mod non_float
         because it's a polymorphic variant type.
       But the kind of [> `Worker_failed of string ] must be a subkind of 
           value mod portable.
PASS expected-fail negative_open_polyvariant_error
== negative_raw_cause_error (fail) ==
File "scratch/oxcaml_research/recovery/r2_env_error/negative_raw_cause_error.ml", line 15, characters 9-71:
15 |          Parallel.fork_join2 parallel (fun _ -> cause) (fun _ -> cause))))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type
         "#(string Effet.Cause.t * string Effet.Cause.t)"
       but an expression was expected of type "('a : value)"
       The layout of #(string Effet.Cause.t * string Effet.Cause.t) is 
           value & value
         because it is an unboxed tuple.
       But the layout of #(string Effet.Cause.t * string Effet.Cause.t) must be a sublayout of
         value.
PASS expected-fail negative_raw_cause_error
== negative_ref_capture (fail) ==
File "scratch/oxcaml_research/recovery/r2_env_error/negative_ref_capture.ml", line 17, characters 15-22:
17 |           incr counter;
                    ^^^^^^^
Error: This value is "contended"
         because it is used inside the function at file "scratch/oxcaml_research/recovery/r2_env_error/negative_ref_capture.ml", lines 16-18, characters 8-30
         which is expected to be "portable"
         because it is contained (via constructor "Thunk") (with some modality) in the value at file "scratch/oxcaml_research/recovery/r2_env_error/negative_ref_capture.ml", lines 14-18, characters 4-32.
       However, the highlighted expression is expected to be "uncontended".
PASS expected-fail negative_ref_capture
summary: pass=9 fail=0
